<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="8dp">

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/game_list_title"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/game_title"/>

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/game_list_platform"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/game_list_platform"/>

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/game_list_description"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/game_list_description"/>

</LinearLayout>